--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <div class="container-fluid">
     <a class="navbar-brand d-flex align-items-center gap-2" href="{% url 'dashboard' %}">
       <img src="{% static 'img/logo.png' %}" alt="Logo" style="height:32px;" onerror="this.style.display='none'">
-      <span>ML Cooperativa</span>
+      <span>Cooperativa Tulcan LTDA.</span>
     </a>
 
     <div class="collapse navbar-collapse">
